--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "@supabase/supabase-js": "^2.33.1",
     "@types/card-validator": "^7.0.1",
     "@types/jwt-decode": "^3.1.0",
     "@types/yup": "^0.32.0",
-    "@supabase/supabase-js": "^2.33.1",
     "axios": "^1.5.0",
     "credit-card-validator": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-router-hash-link": "^2.4.3",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
