--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.8",
+    "@mui/x-date-pickers": "^6.13.0",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@supabase/supabase-js": "^2.33.1",
@@ -18,6 +22,7 @@
     "@types/yup": "^0.32.0",
     "axios": "^1.5.0",
     "credit-card-validator": "^1.0.8",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
