--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-router-hash-link": "^2.4.3",
+    "styled-components": "^5.3.11",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
