--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/x-date-pickers": "^6.13.0",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.6",
     "@supabase/supabase-js": "^2.33.1",
     "@types/card-validator": "^7.0.1",
     "@types/jwt-decode": "^3.1.0",
@@ -31,6 +33,7 @@
     "react-router-dom": "^6.15.0",
     "react-router-hash-link": "^2.4.3",
     "reactjs-popup": "^2.0.6",
+    "stripe": "^13.6.0",
     "styled-components": "^5.3.11",
     "swiper": "^10.2.0"
   },
