--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
@@ -28,6 +29,7 @@
     "credit-card-validator": "^1.0.8",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
@@ -38,7 +40,9 @@
     "swiper": "^10.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.2.15",
+    "@types/react-beautiful-dnd": "^13.1.5",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-hash-link": "^2.4.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
