--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.5.0",
     "credit-card-validator": "^1.0.8",
     "dayjs": "^1.11.10",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
